# backend/src/main/scala/it/marcopaggioro/easypay/routes/EasyPayAppRoutes.scala
@@ -1,13 +1,13 @@
 package it.marcopaggioro.easypay.routes
 
-import akka.actor.typed.scaladsl.AskPattern._
+import akka.actor.typed.scaladsl.AskPattern.*
 import akka.actor.typed.scaladsl.Behaviors
 import akka.actor.typed.{ActorRef, ActorSystem, Scheduler, SupervisorStrategy}
-import akka.http.scaladsl.model._
+import akka.http.scaladsl.model.*
 import akka.http.scaladsl.model.headers.HttpCookie
 import akka.http.scaladsl.model.ws.{Message, TextMessage}
-import akka.http.scaladsl.server.Directives._
-import akka.http.scaladsl.server._
+import akka.http.scaladsl.server.*
+import akka.http.scaladsl.server.Directives.*
 import akka.http.scaladsl.server.directives.BasicDirectives.extractRequest
 import akka.http.scaladsl.settings.CorsSettings
 import akka.http.scaladsl.unmarshalling.{FromEntityUnmarshaller, Unmarshaller}
@@ -19,8 +19,8 @@ import akka.stream.typed.scaladsl.ActorSource
 import akka.util.ByteString
 import akka.{Done, NotUsed}
 import cats.data.Validated
+import io.circe.*
 import io.circe.Encoder.encodeSeq
-import io.circe._
 import io.circe.jawn.decode
 import io.circe.syntax.EncoderOps
 import it.marcopaggioro.easypay.AppConfig
@@ -28,8 +28,8 @@ import it.marcopaggioro.easypay.AppConfig.askTimeout
 import it.marcopaggioro.easypay.EasyPayApp.{completeWithError, completeWithJson, generateJsonError}
 import it.marcopaggioro.easypay.actor.WebSocketsManagerActor.WebSocketsManagerActorCommand
 import it.marcopaggioro.easypay.actor.{TransactionsManagerActor, UsersManagerActor, WebSocketsManagerActor}
-import it.marcopaggioro.easypay.database.PostgresProfile._
-import it.marcopaggioro.easypay.database.PostgresProfile.api._
+import it.marcopaggioro.easypay.database.PostgresProfile.*
+import it.marcopaggioro.easypay.database.PostgresProfile.api.*
 import it.marcopaggioro.easypay.database.scheduledoperations.ScheduledOperationRecord.ScheduledOperationUserJoinEncoder
 import it.marcopaggioro.easypay.database.scheduledoperations.{ScheduledOperationRecord, ScheduledOperationsTable}
 import it.marcopaggioro.easypay.database.transactionshistory.TransactionsHistoryRecord.TransactionUserJoinEncoder
@@ -44,14 +44,8 @@ import it.marcopaggioro.easypay.domain.classes.userdata.{Email, UserData}
 import it.marcopaggioro.easypay.domain.classes.{Money, ScheduledOperation, Validable}
 import it.marcopaggioro.easypay.domain.{TransactionsManager, UsersManager}
 import it.marcopaggioro.easypay.routes.EasyPayAppRoutes.circeUnmarshaller
+import it.marcopaggioro.easypay.routes.payloads.*
 import it.marcopaggioro.easypay.routes.payloads.LoginPayload.LoginPayloadDecoder
-import it.marcopaggioro.easypay.routes.payloads.{
-  CreateScheduledOperationPayload,
-  GetOperationsPayload,
-  LoginPayload,
-  TransferMoneyPayload,
-  UpdateUserDataPayload
-}
 import it.marcopaggioro.easypay.utilities.{JwtUtils, ValidationUtilities}
 import slick.jdbc.JdbcBackend.Database
 
@@ -489,6 +483,14 @@ class EasyPayAppRoutes(webSocketManagerActorRef: ActorRef[WebSocketsManagerActor
           .If(transactionRecord.senderCustomerId === customerId)
           .Then(transactionRecord.recipientCustomerId === userRecord.customerId)
           .Else(transactionRecord.senderCustomerId === userRecord.customerId)
+      }
+      .filterOpt(payload.maybeEmail) { case ((_, record), email) =>
+        record.customerId =!= customerId && record.email.asColumnOf[String].like(s"%${email.value}%")
+      }
+      .filterOpt(payload.maybeFullName) { case ((_, record), fullName) =>
+        record.customerId =!= customerId && (record.firstName.asColumnOf[String] ++ LiteralColumn(" ") ++ record.lastName
+          .asColumnOf[String]).toLowerCase
+          .like(s"%${fullName.toLowerCase}%")
       }
 
     val getHistoryCount: Future[Int] = database.run {
